<resources>
    <string name="app_name">Skatert</string>

    <string name="Authorize">Log in</string>
    <string name="Sign_In">Sign in</string>

    <string name="Ok">Okay</string>

    <string name="Username">Username</string>
    <string name="Nickname">Nickname</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>

    <string name="Confirm">Confirm</string>
    <string name="VerificationCodeAction">Enter verification code</string>

    <string name="DefaultUsernameExample">Drake</string>

    <string name="HomeActivityToolbar">Favourite tracks</string>
    <string name="HomeActivityToolbarPattern">Favourite tracks (%d)</string>
    <string name="HomeActivityDrawerToolbar">Options</string>
    <string name="HomeActivityDrawerTitle">Skatert Music</string>
    <string name="HomeActivityDrawerOpen">Open</string>
    <string name="HomeActivityDrawerClose">Close</string>
    <string name="HomeActivityButtonContentDescription">Opens drawer</string>
    <string name="HomeActivityMakeLastFM">Make LastFM integration</string>
    <string name="HomeActivityLogOut">Log out</string>
    <string name="HomeActivityRefresh">Refresh</string>
    <string name="HomeActivityLastFmNickname">Enter your LastFM nickname</string>
    <string name="HomeActivityListSubscriptions">Subscriptions</string>
    <string name="HomeActivityListMusicRecommendations">Recommendations</string>

    <string name="SubscriptionsActivityDescription">Close subscriptions tab</string>
    <string name="SubscriptionsActivityToolbar">Subscriptions</string>
    <string name="SubscriptionsActivityTextView">Subscription nickname</string>
    <string name="SubscriptionsActivityUnsubscribe">Unsubscribe</string>
    <string name="SubscriptionsActivitySubscribe">User you want to subscribe</string>
    <string name="SubscriptionsActivityButton">Subscribe</string>

    <string name="RecommendationsActivityDescription">Close recommendations</string>
    <string name="RecommendationsActivityToolbar">Recommendations</string>
    <string name="RecommendationsActivityUpdate">Update</string>

    <string name="SharedPreferencesList">MainSharedPreferences</string>
    <string name="SharedPreferencesNickname">Preferences-Nickname</string>
    <string name="SharedPreferencesToken">Preferences-Token</string>
    <string name="SharedPreferencesLastStatusCode">Preferences-StatusCode</string>

    <string name="LogInActivityCodeVerification">Enter verification code</string>
    <string name="LogInActivityCodeExample">123456</string>
    <string name="LastFmNickname">LastFM nickname</string>

    <string name="TrackMarkupTrackName">Track name</string>
    <string name="TrackMarkupTrackArtist">Track artist</string>
    <string name="TrackMarkupTrackAlbum">Track album</string>
    <string name="TrackMarkupTrackManipulationDescription">Like/unlike specified track</string>

</resources>