<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/RelativeLayout">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:text="@string/TrackMarkupTrackName"
            android:layout_margin="10sp"
            android:layout_alignParentStart="true"/>

        <ImageButton
            android:id="@+id/likeDislikeButton"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/heart"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/TrackMarkupTrackManipulationDescription"/>

    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/White"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10sp"
            android:text="@string/TrackMarkupTrackArtist"/>

        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="end"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="10sp"
            android:text="@string/TrackMarkupTrackAlbum"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>