<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp">

        <ImageButton
            android:id="@+id/closeSubscriptionsButton"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/close"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/SubscriptionsActivityDescription" />

        <TextView
            android:id="@+id/homeActivityToolbar"
            android:layout_marginStart="30sp"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_toEndOf="@id/closeSubscriptionsButton"
            android:gravity="center"
            android:text="@string/SubscriptionsActivityToolbar"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <Button
            android:id="@+id/subscribeButton"
            android:text="@string/SubscriptionsActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5sp"/>

    </RelativeLayout>


    <ListView
        android:id="@+id/subscriptionsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent">
    </ListView>

</LinearLayout>